demo-kubernetes-components/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
--- # this is used to separate files in yaml documents three dashes are used
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer   # used to expose service externally, assigns a public IP(by default its clusterIP which is internal only)
  ports:
    - protocol: TCP
      port: 8081     # port on the service
      targetPort: 8081 # port on the pod
      nodePort: 30000 # optional: to specify a particular node port, where the external IP will be accessible, Range: 30000-32767 why? https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
